<resources>
    <string name="app_name">ShouldISki</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_lookout">Lookout</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="select_Date">Select Your Date</string>
    <string name="search">Search</string>
    <string name="date_hint">Click Button To Select Your Date</string>
    <string name="preference">Preference Setting</string>
    <string name="preference_snow_condition">Snow Condition</string>
    <string name="powdersnow">Powder Snow</string>
    <string name="groomedsnow">Groomed Snow</string>
    <string name="preference_weather">Weather</string>
    <string name="cold">Cold</string>
    <string name="warm">Warm</string>
    <string name="snowing">Snowing</string>
    <string name="clear">Clear Sky &amp; Sunny</string>
    <string name="preference_skills">Skills</string>
    <string name="carve">Carve</string>
    <string name="park">Park</string>
    <string name="preference_level">Level</string>
    <string name="lookout_topic">Search A Resort!</string>
    <string name="weather">Mostly Sunny</string>
    <string name="hotel">Few Hotel</string>
    <string name="traffic">Light</string>
    <string name="ski_condition">Excellent\nPowder</string>
    <string name="crowd">Expect\nCrowded</string>
    <string name="drive_time">3h20min\n  Drive</string>
    <string name="overall_score">Overall Score: 75/100</string>
    <string name="recommended_or_not">Somewhat Recommended</string>
    <string name="save">Save Preference</string>
    <string name="enter_city_address">Enter City Address</string>
    <string name="beginer">Beginer</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="shouldski">ShouldSki</string>
</resources>