<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.profile.ProfileFragment">

            <TextView
                android:id="@+id/preference_setting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:padding="8dp"
                android:text="@string/preference"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_snowCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/preference_setting_text">

                <TextView
                    android:id="@+id/preference_snowCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preference_snow_condition"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/preference_switch_powdersnow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="@string/powdersnow"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_snowCondition" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/preference_switch_groomedsnow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="@string/groomedsnow"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_switch_powdersnow" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_snowCondition">

                <TextView
                    android:id="@+id/preference_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/preference_weather"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/preference_switch_cold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="@string/cold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_weather" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/preference_switch_warm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="@string/warm"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_switch_cold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/preference_switch_snowing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="@string/snowing"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_switch_warm" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/preference_switch_clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="@string/clear"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_switch_snowing" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_weather">

                <TextView
                    android:id="@+id/preference_skills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/preference_skills"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/preference_switch_carve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="@string/carve"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_skills" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/preference_switch_park"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="@string/park"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_switch_carve" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_skill">

                <TextView
                    android:id="@+id/preference_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/preference_level"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/preference_level">

                    <RadioButton
                        android:id="@+id/radioButton_beginer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beginer"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radioButton_intermediate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intermediate"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radioButton_expert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expert"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_level">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_bottom"
                android:layout_width="match_parent"
                android:layout_height="56sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_save">
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
